# domx

./: .gitignore  Makefile.am  configure.ac
mmplatform/: mmplatform.h
mmplatform/src/: Makefile.am  ipc_setup.c  mmplatform.c
src/: Makefile
src/mmplatform/: Makefile  mmplatform.h
src/system/domx/: Makefile  omx_proxy_common.h  omx_rpc.h
src/system/domx/omx_proxy_common/src/: omx_proxy_common.c
src/system/domx/omx_rpc/inc/: omx_rpc_skel.h  omx_rpc_utils.h
src/system/domx/omx_rpc/src/: omx_rpc_skel.c  omx_rpc_utils.c
src/system/mm_osal/: Makefile  timm_osal_error.h  timm_osal_events.h  timm_osal_interfaces.h  timm_osal_memory.h  timm_osal_mutex.h  timm_osal_osal.h  timm_osal_pipes.h  timm_osal_semaphores.h  timm_osal_task.h  timm_osal_trace.h  timm_osal_types.h
src/system/mm_osal/src/: timm_osal.c  timm_osal_events.c  timm_osal_memory.c  timm_osal_mutex.c  timm_osal_pipes.c  timm_osal_semaphores.c  timm_osal_task.c  timm_osal_trace.c
src/system/omx_core/: Makefile  omx_audio.h  omx_core.h  omx_image.h  omx_index.h  omx_ivcommon.h  omx_other.h  omx_ti_common.h  omx_ti_index.h  omx_ti_ivcommon.h  omx_ti_video.h  omx_types.h  omx_video.h
src/system/omx_core/inc/: omx_componenttable.h
src/system/omx_core/src/: omx_componenttable.c  omx_core.c
src/video/omx_proxy_component/: Makefile
src/video/omx_proxy_component/src/: omx_proxy_sample.c
system/domx/: Makefile.am  omx_proxy_common.h  omx_rpc.h
system/domx/omx_proxy_common/src/: Android.mk  Makefile.am  omx_proxy_common.c
system/domx/omx_rpc/inc/: omx_rpc_internal.h  omx_rpc_skel.h  omx_rpc_stub.h  omx_rpc_utils.h
system/domx/omx_rpc/src/: Android.mk  Makefile.am  omx_rpc.c  omx_rpc_config.c  omx_rpc_platform.c  omx_rpc_skel.c  omx_rpc_stub.c  omx_rpc_utils.c
system/mm_osal/src/: Makefile.am  timm_osal_events.c  timm_osal_memory.c  timm_osal_pipes.c  timm_osal_pipes_nw.c  timm_osal_semaphores.c  timm_osal_task.c
system/omx_core/inc/: OMX_ComponentRegistry.h  OMX_Debug.h  OMX_DebugMem.h  OMX_TI_Common.h  OMX_TI_Core.h  OMX_TI_IVCommon.h  OMX_TI_Index.h  OMX_TI_Video.h
system/omx_core/src/: Makefile.am  OMX_Core.c
test/: Makefile
test/camera/: Makefile  Makefile.am
test/camera/inc/: camera_test.h  dss_lib.h
test/camera/src/: cam_3a_test.c  cam_fps_test.c  cam_imgcap_test.c  cam_pre_test.c  cam_vidcap_no_vnf_test.c  cam_vidcap_test.c  cam_zoom_test.c  camera_il_client.c  dss_lib.c  proxy_test.c
test/daemon/: ClientDaemon.c  Makefile
test/h264dec/: Makefile  Makefile.am
test/h264dec/inc/: H264_Decoder_ILClient.h  ih264vdec.h
test/h264dec/src/: H264_Decoder_ILClient.c  H264_Decoder_ILClient_TestCases.c
test/h264enc/: Makefile  Makefile.am
test/h264enc/inc/: H264_ILClient.h
test/h264enc/src/: H264_ILClient.c  H264_ILClient_AdvancedSettings.c  H264_ILClient_BasicSettings.c  H264_ILClient_DynamicSettings.c
test/h264play/: Makefile.am
test/h264play/inc/: H264_Playback_ILClient.h  v4l2_display.h
test/h264play/src/: H264_Playback_ILClient.c  H264_Playback_ILClient_TestCases.c  v4l2_display.c
test/h264play2/: Makefile.am
test/h264play2/inc/: H264_Playback_ILClient.h  debug_utils.h  ih264vdec.h
test/h264play2/src/: H264_Playback_ILClient.c  v4l2_display.c
test/jpegdec/: Makefile  Makefile.am
test/jpegdec/inc/: omx_jpegd.h  omx_jpegd_test.h  omx_jpegd_util.h
test/jpegdec/src/: omx_jpegd.c  omx_jpegd_test_main.c  omx_jpegd_testcases.c
test/make/: start.mk
test/mpeg4dec/: Makefile.am
test/mpeg4dec/inc/: MPEG4_Decoder_ILClient.h
test/mpeg4dec/src/: mpeg4_decoder_ilclient.c
test/mpeg4enc/: Makefile.am
test/mpeg4enc/inc/: MPEG4_ILClient.h
test/mpeg4enc/src/: MPEG4_ILClient.c
test/omtb/: makefile
test/omtb/inc/: mxdbg.h  omtbapi.h  omtbaudio.h  omtbcmd.h  omtbcommon.h  omtbcommon_flags.h  omtbcommon_nf.h  omtbdebug.h  omtbdisplay.h  omtbg711adec.h  omtbh264vdec.h  omtbh264venc.h  omtbhdvpssvfcc.h  omtbhdvpssvfdc.h  omtbmain.h  omtbportparam.h  rtxdata.h  rtxerr.h  swdef.h
test/omtb/src/: cmdline.c  dbgcmd.c  mvxdbg.c  omtbapi.c  omtbaudio.c  omtbcmd.c  omtbcmdentries.c  omtbcommon.c  omtbdisplay.c  omtbg711adec.c  omtbg711adeccfgcmdentries.c  omtbh264vdec.c  omtbh264vdeccfgcmdentries.c  omtbh264venc.c  omtbh264venccfgcmdentries.c  omtbhdvpssvfcc.c  omtbhdvpssvfcccfgcmdentries.c  omtbhdvpssvfdc.c  omtbhdvpssvfdccfgcmdentries.c  omtbmain.c  omtbomxapicmdentries.c
test/sample_proxy/: Makefile  Makefile.am  test_sample_proxy.c
video/omx_proxy_component/inc/: PVHeader.h
video/omx_proxy_component/src/: Config.mk  Makefile.am  android_omx_proxy_dec.c  omx_proxy_camera.c  omx_proxy_h264dec.c  omx_proxy_h264enc.c  omx_proxy_jpeg_dec.c  omx_proxy_mpeg4dec.c  omx_proxy_mpeg4enc.c  omx_proxy_sample.c  omx_proxy_vp6dec.c  omx_proxy_vp7dec.c
